--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
       s0.parentNode.insertBefore(s1,s0);
     })();
   </script>
+  <!--End of Tawk.to Script-->  
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5c36e579361b3372892f5493/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
   <!--End of Tawk.to Script-->    
   
   <header>
@@ -838,22 +851,8 @@
     <!--Wow js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous"></script>
     <script>
-       wow = new WOW(
-                      {
-                      boxClass:     'wow',      // default
-                      animateClass: 'animate__animated', // default
-                      offset:       0,          // default
-                      mobile:       true,       // default
-                      live:         true        // default
-                    }
-                    )
-                    wow.init();
-
-                    var clickTimes=0;
-document.getElementById('more-services').addEventListener("click",(()=>{
-    /*document.getElementsByClassName('hide-service').foreach((item)=>{
-        item.style.display="block";
-    });*/
+      var clickTimes=0;
+    document.getElementById('more-services').addEventListener("click",(()=>{
     clickTimes++;
     document.querySelectorAll('.service-hidden').forEach((item,index)=>{
         if(clickTimes===1&&index<3){
