--- a/termiteSubfloorImages.html
+++ b/termiteSubfloorImages.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-    <meta name="og:title" content="">
-    <meta name="og:description" content="">
-    <meta name="og:image" content="">
-  <title>Formula Pest Control-Termite Subfloor Images</title>
+  <title>Formula Pest Control : Images Gallery for Termite Treatment done in Sub Floor</title>
+  <meta name="title" content="Formula Pest Control : Images Gallery for Treatment Types" />
+  <meta name="description" content="We apply our science-based approach to help identify the root of your problem and implement a solution made expressly for your home. Check out our Image Gallery to know more about Formula Pest Control" />
+  <meta name="keywords" content="Gallery Images of Insects Control Treatment" />
+  <meta name="author" content="Formula Pest Control" />
+  <meta name="copyright" content="www.formulapestcontrol.com.au" />
+  <meta http-equiv="Reply-to" content="formulapestcontrol@gmail.com" />
+  <meta http-equiv="content-language" content="EN" />
+  <meta name="ROBOTS" content="INDEX,FOLLOW" />
+  <meta name="creation_Date" content="10/05/2020" />
+  <meta name="revisit-after" content="7 days" />
+    
   <!--Bootstrap 4.5 CSS-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <!--Font Awesome-->
