--- a/carpet-beetle-treatment-in-melbourne.html
+++ b/carpet-beetle-treatment-in-melbourne.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="og:title" content="">
-    <meta name="og:description" content="">
-    <meta name="og:image" content="">
-    <title>Carpet Beetle Treatment in Melbourne</title>
+    <title>Carpet Beetle Treatment Melbourne : Inspection and Removal : Formula Pest Control</title>
+    <meta name="title" content="Carpet Beetle Treatment Melbourne : Inspection and Removal : Formula Pest Control" />
+    <meta name="description" content="Guaranteed Carpet Beetle Teatment service in Melbourne to residential and commercial properties. Call for a free quote or Emergency carpet beetle inspecton/removal in Melbourne." />
+    <meta name="keywords" content="Formula Pest Control, Melbourne Pest Control,Carpet Beetle Treatment" />
+    <meta name="author" content="Formula Pest Control" />
+    <meta name="copyright" content="www.formulapestcontrol.com.au" />
+    <meta http-equiv="Reply-to" content="formulapestcontrol@gmail.com" />
+    <meta http-equiv="content-language" content="EN" />
+    <meta name="ROBOTS" content="INDEX,FOLLOW" />
+    <meta name="creation_Date" content="10/05/2020" />
+    <meta name="revisit-after" content="7 days" />
     
     <!--Bootstrap 4.5 CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
